add camera code

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Recording result
 recording/
 
+# Virtual environment
+cameravenv/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
